idf_component_register(SRCS "FtmClient.c" "main.c"
                           "gpio.c"
                           "common.c"
                           "EspNowSender.c"
                           "EspNowReceiver.c"
                           "FtmClient.c"
                           "FtmResponder.c"
                           "EspNowCommon.c"
                           "FtmCommon.c"
                    INCLUDE_DIRS ".")
